--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,5 +19,6 @@
 {% include nav-top.html %}
 {{ content }}
 {% include footer.html %}
+<script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
 </body>
 </html>
