--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,11 +3,12 @@
 
 @import "bootstrap/functions";
 
-$body-bg: #222;
-$body-color: #ccc;
+$body-bg: #ddd;
+$body-color: #333;
 
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
+@import "bootstrap/utilities";
 
 @import "bootstrap/root";
 @import "bootstrap/reboot";
@@ -16,3 +17,31 @@ $body-color: #ccc;
 @import "bootstrap/images";
 @import "bootstrap/containers";
 @import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
+@import "bootstrap/transitions";
+@import "bootstrap/dropdown";
+@import "bootstrap/button-group";
+@import "bootstrap/nav";
+@import "bootstrap/navbar";
+@import "bootstrap/card";
+@import "bootstrap/accordion";
+@import "bootstrap/breadcrumb";
+@import "bootstrap/pagination";
+@import "bootstrap/badge";
+@import "bootstrap/alert";
+@import "bootstrap/progress";
+@import "bootstrap/list-group";
+@import "bootstrap/close";
+@import "bootstrap/toasts";
+@import "bootstrap/modal";
+@import "bootstrap/tooltip";
+@import "bootstrap/popover";
+@import "bootstrap/carousel";
+@import "bootstrap/spinners";
+@import "bootstrap/offcanvas";
+
+@import "bootstrap/helpers";
+
+@import "bootstrap/utilities/api";
