--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article>
-    <div class="prose prose-lg mx-auto px-3">
+    <div class="prose">
         {{ content }}
     </div>
 </article>
