--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article>
-    <div class="prose">
+    <div class="prose mx-auto px-3 py-4">
         {{ content }}
     </div>
 </article>
