--- a/_sass/_prose.sass
+++ b/_sass/_prose.sass
@@ -1,6 +1,6 @@
 .prose
-  max-width: 65ch
-  font-size: 1.125rem
+  max-width: 60ch
+  font-size: 1.25rem
   line-height: 1.75
 
   h1, h2, h3, h4, h5, h6
@@ -9,3 +9,9 @@
 
   li + li
     margin-top: map-get($spacers, 3)
+
+  img
+    max-width: 100%
+    height: auto
+    margin: map-get($spacers, 4) 0
+    border-radius: $border-radius
