Tweak styles: $body-*

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -9,8 +9,8 @@ $line-height-base: 1.625;
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
-$body-bg: $teal-100;
-$body-color: $teal-700;
+$body-bg: $gray-100;
+$body-color: $gray-700;
 
 @import "bootstrap/root";
 @import "bootstrap/reboot";
